1.2beta1
    * tests: invalid answer no longer marks test as passed, some windows can
      be closed with ENTER key, test counter fixed and added to reports
    * tools/gl_info.py: add pyglet version and platform info
    * Windows: fix loading system cursors
	* OS X: fix window creation under Mountain Lion (thanks Kuba Niegowski)
	* OS X: Added dynamic library loading support for pyinstaller's handling of
	  dynamic libraries on OS X (thanks Nathan Stocks)

1.2alpha1
	The major 1.2 release brings pyglet to Python 3. Pyglet now also runs on
	64-bit operating systems Linux, Windows and OS X. The OS X layer has
	switched to Cocoa.

	Backwards-incompatible API changes:

	* renamed Label parameter 'halign' to 'align', fix for issue:460
	* remove unused module 'glext_missing' - everything should already be in
	  'glext_arb'

	Other changes and fixes:

	* updated OpenGL wrappers (except for agl* and wgl*)
	* added set_mouse_position to window, fix for issue:467
	* configurable texture filtering for issue:463
	* correction to use textures min/mag filter for get_texture
	* fix runaway event loops caused by least squares estimator
	* compute correct expiration time for the event loop
	* fix ordering of Groups and OrderedGroups
	* fix loading of small images using GdkPixbuf2ImageDecoder for issue:493
	* applied Andrew Straw's pyglet-xvfb.patch patch from issue:456
	* fix for issue:517 tests/window/CONTEXT_SHARE.py glIsList exceptions
	* numeric keypad constants in docs don't match key.py, fix for issue:523
	* use new method for quering extensions if OpenGL version is >= 3
	* add missing freetype ctypes declarations, patch from issue:529
	* add flag to check if event-loop is running
	* add variation on how to import PIL, fix issue:551
	* handle race condition in texture cleanup, fix for issue:565
	* fix examples/window_platform_event.py when no "names", issue:561
	* fix for GIFs with alpha, Frankie.Robertson, issue:411